Adding RootDepth property for moving project root
There is a new section in vs-chromium-project.txt called [Properties]. In there one can add a new property called "RootDepth" which can be set to a positive number. This will move the root of the project forward in the path by the number of directories specified by the number. This can be especially useful for sharing a single vs-chromium-project.txt file across several sub directories.

--- a/src/Server/Server.csproj
+++ b/src/Server/Server.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Ipc\TypedMessageHandlers\GetProjectDetailsRequestHandler.cs" />
     <Compile Include="Ipc\TypedMessageHandlers\PauseIndexingRequestHandler.cs" />
     <Compile Include="Ipc\TypedMessageHandlers\ResumeIndexingRequestHandler.cs" />
+    <Compile Include="Projects\IPropertyCollection.cs" />
     <Compile Include="Projects\ProjectPathComparer.cs" />
     <Compile Include="FileSystem\SnapshotScanResult.cs" />
     <Compile Include="Ipc\TypedMessageHandlers\GetDatabaseStatisticsRequestHandler.cs" />
@@ -99,6 +100,7 @@
     <Compile Include="Operations\OperationHandlers.cs" />
     <Compile Include="Operations\OperationProcessor.cs" />
     <Compile Include="ProgressTracking\PartialProgressReporter.cs" />
+    <Compile Include="Projects\PropertyCollection.cs" />
     <Compile Include="Search\CompiledTextSearchDataFactory.cs" />
     <Compile Include="Search\CompiledTextSearchProviderFactory.cs" />
     <Compile Include="Search\FilesLoadedResult.cs" />
